--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </nav>  
     <div class="container">
         <header>
-            <h1><a href="info.html">Jawon</a>, I'm a designer.
+            <h1><a href="contact.html">Jawon</a>, I'm a designer.
             I worked for <a href="https://www.stunitas.com/">ST Unitas</a> as a brand designer for 2 years and 8 months.
             From web design to editing design, goods design, marketing design, and now I'm studying <a href="#markup">markup</a>.
             I'm seeking product design opportunities.
