--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
     </nav>  
     <div class="container">
         <section>
-            <img src="/image/me." alt="">
+            <img src="/image/me.jpg" alt="">
             <span>안녕하세요. 디자이너 신자원입니다.<i class="far fa-smile"></i></span>
             <p></p>
         </section>
